plutus-core/test/type-errors/errorKind.plc
(program 0.1.0
  (error (lam a (type) a))
)
